fixed mysql sql_mode cofig

--- a/mysql/8.0/config/my.cnf
+++ b/mysql/8.0/config/my.cnf
@@ -33,6 +33,8 @@ socket=/var/run/mysqld/mysqld.sock
 skip-host-cache
 skip-name-resolve
 
+super_read_only = off
+
 port=3306
 lower_case_table_names = 1
 character-set-server   = utf8mb4
