--- a/mysql/5.7/config/my.cnf
+++ b/mysql/5.7/config/my.cnf
@@ -28,10 +28,13 @@ socket=/var/run/mysqld/mysqld.sock
 #no-auto-rehash
 #connect_timeout=2
 
+
 # server read
 [mysqld]
 skip-host-cache
 skip-name-resolve
+#sql_mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
 port=3306
 lower_case_table_names = 1
