--- a/mysql/mariadb10.3/config/my.cnf
+++ b/mysql/mariadb10.3/config/my.cnf
@@ -32,6 +32,8 @@ socket=/var/run/mysqld/mysqld.sock
 [mysqld]
 skip-host-cache
 skip-name-resolve
+#sql_mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
 port=3306
 lower_case_table_names = 1
