--- a/zookeeper/docker-compose.yml
+++ b/zookeeper/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.1'
 
 services:
   zoo1:
+    container_name: zookeeper1
     image: wxcsdb88/zookeeper:3.4.13
     restart: always
     hostname: zoo1
@@ -12,6 +13,7 @@ services:
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
 
   zoo2:
+    container_name: zookeeper2
     image: wxcsdb88/zookeeper:3.4.13
     restart: always
     hostname: zoo2
@@ -22,6 +24,7 @@ services:
       ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=zoo3:2888:3888
 
   zoo3:
+    container_name: zookeeper3
     image: wxcsdb88/zookeeper:3.4.13
     restart: always
     hostname: zoo3
