fixed docker-copmpose for kafka

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   zookeeper:
-    container_name: zookeeper-kafka-zk
+    container_name: single-broker-zk
     image: wxcsdb88/zookeeper:3.4.13
     ports:
       - "2181:2181"
@@ -9,16 +9,9 @@ services:
     container_name: zookeeper-kafka-kf
     image: wxcsdb88/kafka:2.11-2.0.0
     ports:
-      - target: 9094
-        published: 9094
-        protocol: tcp
-        mode: host
+      - "9092:9092"
     environment:
-      HOSTNAME_COMMAND: "docker info | grep ^Name: | cut -d' ' -f 2"
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://_{HOSTNAME_COMMAND}:9094
-      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
