--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -5,13 +5,30 @@ services:
     image: wxcsdb88/zookeeper:3.4.13
     ports:
       - "2181:2181"
+    environment:
+      ZOOKEEPER_DATA_DIR: /zookeeper/data
+      ZOOKEEPER_DATA_LOG_DIR: /zookeeper/log
+    volumes:
+      - ./data/zookeeper/data:/zookeeper/data
+      - ./data/zookeeper/log:/zookeeper/log
+
   kafka:
     container_name: zookeeper-kafka-kf
     image: wxcsdb88/kafka:2.11-2.0.0
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      TZ: CST-8
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 1 # replication nums
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://127.0.0.1:9092
+      KAFKA_LISTENERS: INSIDE://:9092
+      # KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LOG_DIRS: /kafka/logs
+      KAFKA_LOG_RETENTION_HOURS: 168
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./data/kafka/logs/:/kafka/logs
