--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -3,10 +3,15 @@ services:
   nexus3:
     image: sonatype/nexus3
     container_name: nexus3
+    environment:
+      INSTALL4J_ADD_VM_PARAMS: "-Xms2g -Xmx2g -XX:MaxDirectMemorySize=3g  -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs"
     ports:
-      - "38091:8081"
+      - "8081:8081"  # nexus ui
+      - "9091:9091"  # proxy 代理仓库， pull
+      - "9092:9092"  # docker(hosted)私有仓库，pull & push
     volumes:
       - ./nexus-data:/nexus-data
+      - /etc/localtime:/etc/localtime:ro
     logging:
       driver: "json-file"
       options:
