--- a/golang/go1.14.4/Dockerfile
+++ b/golang/go1.14.4/Dockerfile
@@ -2,8 +2,6 @@ FROM golang:1.14.4-alpine3.12
 
 LABEL maintainer="278810732@qq.com"
 
-RUN apk add --no-cache tzdata git make 
-
-# RUN rm -rf /var/lib/apt/lists/* && rm /var/cache/apk/*
+RUN apk add --no-cache tzdata git make bash
 
 ENV TZ=Asia/Shanghai
