--- a/alpine/3.12/Dockerfile
+++ b/alpine/3.12/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.12
 
 LABEL maintainer="278810732@qq.com"
 
-RUN apk add --no-cache tzdata
+RUN apk add --no-cache tzdata bash
 ENV TZ=Asia/Shanghai
 
 RUN ls -alh
